--- a/scss/_leftside.scss
+++ b/scss/_leftside.scss
@@ -1,13 +1,14 @@
 .left {
     width: 270px;
     height: 850px;
-    background: #bcbcbc;
     float: left;
     overflow-x: hidden;
     overflow-y: auto;
     position: relative;
     z-index: 6;
     scrollbar-width: thin;
+    border: solid 1px #6a6a6a;
+    border-width: 1px 0px;
 
     &::-webkit-scrollbar {
         width: 5px;
@@ -15,12 +16,12 @@
     }
 
     &::-webkit-scrollbar-track {
-        background: #f1f1f1;
+        background: #121212;
         border-radius: 10px;
     }
 
     &::-webkit-scrollbar-thumb {
-        background: #b9becf;
+        background: #45dc16;
         border-radius: 10px;
     }
     
@@ -171,15 +172,15 @@
             &:hover {
 
                 a {
-                    background: #8c8c8c;
-                    color: #ffffff;
+                    background: linear-gradient(to bottom,#1d1d1d 16%,#303030 100%);
+                    color: #57ed22;
 
-                    svg,.total {
-                        fill: #fff;
+                    svg {
+                        fill: #3abc0d;
                     }
 
                     i {
-                        color: #fff;
+                        color: #3abc0d;
                     }
                 }
             }
@@ -191,15 +192,15 @@
                 }
 
                 a {
-                    background: #8c8c8c;
-                    color: #ffffff;
+                    background: linear-gradient(to bottom,#1d1d1d 16%,#303030 100%);
+                    color: #57ed22;
 
-                    svg,.total {
-                        fill: #fff;
+                    svg {
+                        fill: #3abc0d;
                     }
 
                     i {
-                        color: #fff;
+                        color: #3abc0d;
                     }
                 }
             }
@@ -213,14 +214,15 @@
 
             a {
                 display: block;
-                color: #000;
+                color: #e0e0e0 ;
                 width: calc(100% - 50px);
+                background: linear-gradient(to top,#323232 0%,#434343 100%);
                 height: 45px;
                 line-height: 45px;
                 font-size: 14px;
                 padding-left: 50px;
                 position: relative;
-                border-bottom: solid 1px #ababab;
+                border-bottom: solid 1px #6a6a6a;
 
                 //字前小圖
                 i {
@@ -228,7 +230,7 @@
                     top: 12px;
                     left: 18px;
                     font-size: 18px;
-                    color: #505050;
+                    color: #ababab;
 
                     &::before {
                         margin: 0px auto;
@@ -255,7 +257,7 @@
                     position: absolute;
                     left: 18px;
                     top: 12px;
-                    fill: #505050;
+                    fill: #ababab;
                 }
 
                 //字後小框
@@ -264,7 +266,7 @@
                     right: 10px;
                     top: 0px;
                     font-size: 13px;
-                    color: #4d4d4d;
+                    color: #e0e0e0;
                 }
 
                 //LIVE小框
@@ -278,8 +280,8 @@
                     transform: translateY(-50%);
                     right: 42px;
                     font-size: 12px;
-                    background: #4d4d4d;
-                    color: #ed880d;
+                    background: linear-gradient(to right,#a1ea22 0%,#34da14 100%);
+                    color: #2b4517;
                     padding: 0px 4px;
                     border-radius: 3px;
                 }
@@ -289,16 +291,17 @@
                 display: none;
                 width: calc(100% - 30px);
                 height: 30px;
-                background: #676767;
-                border-bottom: solid 1px #8c8c8c;
+                background: #2d2d2d;
+                border-bottom: solid 1px #4c4c4c;
                 line-height: 30px;
                 padding-left: 30px;
                 font-size: 12px;
-                color: #fff;
+                color: #46dd16;
                 cursor: pointer;
 
                 &:hover,&:active,&.active {
-                    background: #4d4d4d;
+                    background: linear-gradient(to right,#45dc16 0%,#8fe720 100%);
+                    color: #1d1d1d;
                 }
 
                 span {
