--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,7 +12,7 @@
 html {
     width: 100%;
     height: 100%;
-    background: #2a2a2a;
+    background: #131313;
 
     body {
         width: 100%;
