--- a/scss/_leftside.scss
+++ b/scss/_leftside.scss
@@ -21,7 +21,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-        background: #45dc16;
+        background: #606360;
         border-radius: 10px;
     }
     
