--- a/scss/_rightside.scss
+++ b/scss/_rightside.scss
@@ -8,6 +8,7 @@
     position: relative;
     z-index: 6;
     scrollbar-width: thin;
+    background: #242424;
 
     &::-webkit-scrollbar {
         width: 8px;
@@ -115,19 +116,18 @@
                 }
             }
         }
-        
     }
 
     //直播小框
     .liveWindow {
         width: 100%;
         height: auto;
-        background: #ababab;
+        background: #292929;
         text-align: center;
 
         .title {
-            background: #747474;
-            border-bottom: solid 1px #ababab;
+            background: linear-gradient(to top,#323232 0%,#434343 100%);
+            box-shadow: 0px 2px 1px 0px #171717;
             color: #fff;
             padding: 7px 15px;
             font-size: 12px;
@@ -163,7 +163,7 @@
     
                 p {
                     font-size: 12px;
-                    color: #000;
+                    color: #ababab;
                     line-height: 20px;
                 }
             }
@@ -179,9 +179,10 @@
                     top: 50%;
                     left: 50%;
                     transform: translate(-50%,-50%);
+                    color: #ababab;
     
                     span {
-                        color: #fff;
+                        color: #37bb18;
                         font-size: 12px;
                     }
                 }
@@ -199,13 +200,14 @@
     .room {
         width: 100%;
         height: auto;
+        margin-top: 5px;
         //切換按鈕
         .twobut {
             width: 100%;
             height: 27px;
-            background: #747474;
 
             .line {
+                display: none;
                 float: left;
                 width: 1%;
                 height: 100%;
@@ -215,32 +217,42 @@
             button {
                 width: 49.5%;
                 height: 100%;
-                background: transparent;
-                color: #fff;
+                background: #3e3e3e;
+                color: #ababab;
                 font-size: 14px;
                 float: left;
+                margin-right: 1%;
+                border-radius: 3px 3px 0px 0px;
+                border: solid 1px #686868;
+                border-bottom: none;
+
+                &:last-child {
+                    margin: 0px;
+                }
 
                 &:hover,&:active,&.active {
-                    background: #a1a1a1;
-                    color: #000;
+                    background: linear-gradient(to top,#262626 0%,#3c3c3c 100%);
+                    color: #49dd16;
                 }
             }
         }
         .onebut {
             width: 100%;
             height: 27px;
-            background: #747474;
 
             button {
                 width: 100%;
                 height: 100%;
-                background: transparent;
-                color: #fff;
+                background: #3e3e3e;
+                color: #ababab;
                 font-size: 14px;
+                border-radius: 3px 3px 0px 0px;
+                border: solid 1px #686868;
+                border-bottom: none;
 
                 &:hover,&:active,&.active {
-                    background: #a1a1a1;
-                    color: #000;
+                    background: linear-gradient(to top,#262626 0%,#3c3c3c 100%);
+                    color: #49dd16;
                 }
             }
         }
@@ -417,20 +429,20 @@
             overflow-y: auto;
             overflow-x: hidden;
             scrollbar-width: thin;
-            background: #bcbcbc;
+            background: #505050;
 
             &::-webkit-scrollbar {
-                width: 4px;
+                width: 5px;
                 background-color: transparent;
             }
-
+        
             &::-webkit-scrollbar-track {
-                background: #f1f1f1;
+                background: #121212;
                 border-radius: 10px;
             }
-
+        
             &::-webkit-scrollbar-thumb {
-                background: #b9becf;
+                background: #606360;
                 border-radius: 10px;
             }
 
