--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,28 +9,30 @@
 @import "./discount";
 @import "./myself";
 @import "./anime";
+@import "./colorCode";
 html {
     width: 100%;
     height: 100%;
-    background: #131313;
+    background: #2a2a2a;
 
     body {
         width: 100%;
         height: auto;
-        overflow: hidden;
+        overflow-y: hidden;
+        overflow-x: auto;
 
         &::-webkit-scrollbar {
-            height: 10px;
+            width: 5px;
             background-color: transparent;
         }
     
         &::-webkit-scrollbar-track {
-            background: #f1f1f1;
+            background: #121212;
             border-radius: 10px;
         }
     
         &::-webkit-scrollbar-thumb {
-            background: #b9becf;
+            background: #606360;
             border-radius: 10px;
         }
     }
